# EventsProperties

./: .gitignore  example1.py  example2.py  example3.py  example4.py  example4_SIMPLE_works_but_too_advanced.py  example4_thinking.py  example5.py  example6.py  example7.py  example8.py  pyproject.toml  requirements.txt  test.py
