[tool.poetry]
name = "events-properties"
version = "0.1.0"
description = ""
authors = ["me :)"]
readme = "README.md"
packages = [{include = "events_properties"}]

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
